Add/Edit/Delete exceptions from main view - refactor current API - import CSS for buttons
- Renaming all views used in main view using "view_" prefix
- Split api.php into multiple models for readability
- Log JS AJAX errors in Browser console with console.errors()
- Make sure $success and $errors arrays are always defined before we start including MVC
- Fixing an algorithm mistake in view_treeview.php where rule IDs in data-rule-id HTML microdata attributes were just the rule iterator value and not the actual ID from the array in rules.php.
- Fixing many edge cases in ajax_insert.js to make sure "Add rule" form and links stays at the end of the list when adding/deleting nodes.
- HTML code used to display an exception (basically, a <li> element) is now stored in its own view under /view_exception.php, so that the exact same code is used when building the initial page on the server and when the user adds a new exception from the page (we fetch this HTML via JS).

--- a/web/style/treeview.css
+++ b/web/style/treeview.css
@@ -23,6 +23,18 @@
     opacity: 0;
 }
 
+.treeview .exceptions input
+{
+    position: relative;
+    min-width: 0;
+    margin: 0 0 0 20px;
+}
+
+.treeview .exceptions li:hover .button
+{
+    opacity: 1;
+}
+
 .treeview
 {
     -moz-user-select: none;
@@ -102,6 +114,19 @@
 {
     background-position: 0 -16px;
 }
+
+/* Overrides for the Exception form */
+
+.treeview #exceptionview input
+{
+    position: relative;
+    opacity: 1;
+}
+
+.treeview #exceptionview .button {
+    margin: 0 0 0 10px;
+}
+
 
 /* webkit adjacent element selector bugfix */
 @media screen and (-webkit-min-device-pixel-ratio:0)
