--- a/web/style/treeview.css
+++ b/web/style/treeview.css
@@ -30,7 +30,15 @@
     margin: 0 0 0 20px;
 }
 
-.treeview .exceptions li:hover .button
+.treeview .delete-rule
+{
+    position: relative;
+    min-width: 0;
+    margin: 0 0 0 20px;
+}
+
+.treeview .exceptions li:hover .button,
+.treeview .rules li:hover label+input.button
 {
     opacity: 1;
 }
