--- a/web/style/typolib.css
+++ b/web/style/typolib.css
@@ -342,6 +342,10 @@ textarea {
     font-weight: bold;
 }
 
+#template input[type='text'] {
+    width: auto;
+}
+
 /* Responsive */
 
 @media only screen and (max-width: 850px) {
